--- a/lab01/exercise01/style.css
+++ b/lab01/exercise01/style.css
@@ -6,6 +6,28 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
 /*
 Add some style blocks below this line to style the card.
 */
+
+.cards {
+    box-sizing: border-box;
+    border: 1px solid #CCC;
+    width: 35vh;
+    height: 50vh;
+    margin: 10px;
+}
+
+.cards h2, p {
+    margin: 10px;
+}
+
+.cards button {
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.cards img {
+    width: 100%;
+}
