--- a/lab01/exercise02/style.css
+++ b/lab01/exercise02/style.css
@@ -11,14 +11,40 @@ Add some style blocks below this line to style the cards.
 Feel free to borrow from Exercise 1.
 */
 
+.flex-box {
+    display: flex;
+}
+
+.cards {
+    flex: 0 1 35vh;
+    margin: 10px;
+    box-sizing: border-box;
+    border: 1px solid #CCC;
+}
+
+.cards h2, p, button {
+    margin: 10px;
+}
+
+.cards img {
+    width: 100%;
+}
 
 /* Tablet Media Query */
 @media only screen and (max-width: 1000px) {
+   .flex-box {
+       flex-wrap: wrap;
+   }
 
+   .cards {
+       flex: 0 1 46%;
+   }
 }
 
 /* Mobile Phone Media Query */
 @media only screen and (max-width: 600px) {
-
-    
+    .flex-box {
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
 }
