--- a/lab02/static/style.css
+++ b/lab02/static/style.css
@@ -1,9 +1,9 @@
 body * {
     box-sizing: border-box;
-    border: 1px solid #CCC;
 }
 
 body {
+    background-color: #DEDBD8;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
 }
@@ -25,7 +25,7 @@ nav ul {
 }
 
 main {
-    margin: 30vh;
+    margin: 3vh;
 }
 
 @media only screen and (max-width: 1000px) {
