--- a/lab02/templates/restaurant.html
+++ b/lab02/templates/restaurant.html
@@ -15,6 +15,7 @@
         }
 
         .cards {
+            background-color: #F3F3F4;
             margin: 10px;
             border: 1px solid #CCC;
             width: 17vw;
