--- a/lab02/static/style.css
+++ b/lab02/static/style.css
@@ -26,12 +26,39 @@ nav ul {
 
 main {
     margin: 3vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.cards {
+    background-color: #F3F3F4;
+    margin: 10px;
+    border: 1px solid #CCC;
+    flex: 0 1 21%;
+}
+
+.cards > h2, p {
+    margin: 10px;
+}
+
+.cards > hr {
+    opacity: 0.3;
+}
+
+.cards > img {
+    width: 100%;
+    height: 30vh;
 }
 
 @media only screen and (max-width: 1000px) {
-    /* Media queries go here */
+    .cards {
+        flex: 0 1 40%;
+    }
 }
 
 @media only screen and (max-width: 600px) {
-    /* Media queries go here */
+    .cards {
+        flex: 0 1 75%;
+    }
 }
